<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swiperefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/fragment_post" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        android:src="@drawable/baseline_add_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/new_post" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_posts"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smth_went_wrong"
        app:layout_constraintBottom_toTopOf="@id/retry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_text" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/error_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="retry, error_text" />

    <!--
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/editingOrNotBarrier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:barrierDirection="top"
        app:constraint_referenced_ids="inputBarrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/inputBarrier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content, save" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:inputType="number"
        android:maxLines="5"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/buttonDefaultMarginDim"
        android:background="@android:color/transparent"
        android:contentDescription="@string/save_button_description"
        android:src="@drawable/baseline_check_circle_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/editBarGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="cancelEdit,noteEdit,editBarTitle,editedHas"
        app:layout_constraintTop_toTopOf="@+id/editBarBarrier" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/editBarBarrier"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:barrierAllowsGoneWidgets="true"
        app:barrierDirection="top"
        app:constraint_referenced_ids="cancelEdit, noteEdit, editBarTitle, editedHas" />

    <ImageButton
        android:id="@+id/cancelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/buttonDefaultMarginDim"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancell_button_description"
        android:src="@drawable/baseline_cancel_48dp"
        app:layout_constraintBottom_toTopOf="@id/inputBarrier"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/noteEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/buttonDefaultMarginDim"
        android:src="@drawable/baseline_edit_note_48dp"
        app:layout_constraintBottom_toTopOf="@id/inputBarrier"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/editBarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editBarTitle"
        app:layout_constraintBottom_toTopOf="@id/editedHas"
        app:layout_constraintStart_toEndOf="@id/noteEdit"
        app:layout_constraintTop_toTopOf="@id/noteEdit" />

    <TextView
        android:id="@+id/editedHas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="some text"
        app:layout_constraintBottom_toBottomOf="@id/noteEdit"
        app:layout_constraintEnd_toStartOf="@id/cancelEdit"
        app:layout_constraintStart_toEndOf="@id/noteEdit" />
        -->

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>





