<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/defaultMargin">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatarDimen"
        android:layout_height="@dimen/avatarDimen"
        android:contentDescription="@string/descriptionPostAuthorAvatar"
        android:src="@drawable/netology_48dp"
        app:layout_constraintBottom_toBottomOf="@id/barrierPostHeadBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/publishedTime"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/publishedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AppTheme.Menu"
        android:id="@+id/menu"
        android:layout_width="@dimen/avatarDimen"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:contentDescription="@string/menu_description"
        app:icon="@drawable/ic_baseline_more_vert_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <TextView
        android:id="@+id/cardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@id/barrierPostHeadBottom"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierPostHeadBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/defaultMargin"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/defaultMargin"
        app:constraint_referenced_ids="menu, avatar, author, publishedTime" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierPostContentBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/defaultMargin"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/defaultMargin"
        app:constraint_referenced_ids="cardContent, videoWallpaper" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeIv"
        style="@style/Widget.AppTheme.LikeButton"
        android:contentDescription="@string/share_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/buttonDefaultMarginDim"
        android:checkable="true"
        android:insetTop="0dp"
        android:minHeight="0dp"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        app:icon="@drawable/ic_like_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierPostContentBottom" />

    <!--
    <TextView
        android:id="@+id/likeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:text="10"
        app:layout_constraintBottom_toBottomOf="@id/likeIv"
        app:layout_constraintStart_toEndOf="@id/likeIv"
        app:layout_constraintTop_toTopOf="@id/likeIv" />
        -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareIv"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="false"
        android:layout_marginStart="@dimen/defaultMargin"
        android:insetTop="0dp"
        android:minHeight="0dp"
        app:icon="@drawable/ic_baseline_share_24dp"
        app:layout_constraintBottom_toBottomOf="@id/likeIv"
        app:layout_constraintStart_toEndOf="@id/likeIv"
        app:layout_constraintTop_toTopOf="@id/likeIv" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewIv"
        style="@style/Widget.AppTheme.ViewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="false"
        android:clickable="false"
        android:insetTop="0dp"
        android:minHeight="0dp"
        app:icon="@drawable/ic_baseline_remove_red_eye_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierPostContentBottom" />

    <ImageView
        android:id="@+id/videoWallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_max="200dp"
        android:layout_margin="@dimen/defaultMargin"
        app:layout_constraintTop_toBottomOf="@id/cardContent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/playVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_play_circle_outline_48"
        app:layout_constraintTop_toTopOf="@id/videoWallpaper"
        app:layout_constraintBottom_toBottomOf="@id/videoWallpaper"
        app:layout_constraintStart_toStartOf="@id/videoWallpaper"
        app:layout_constraintEnd_toEndOf="@id/videoWallpaper"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:clickable="true"
        android:focusable="true"
        app:constraint_referenced_ids="videoWallpaper, playVideo"
        />
    <!--
    <ImageButton
        android:id="@+id/shareIv"
        android:layout_width="@dimen/bottomPostIconDimen"
        android:layout_height="@dimen/bottomPostIconDimen"
        android:layout_marginStart="@dimen/defaultMargin"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_share_24dp"
        app:layout_constraintStart_toEndOf="@id/likeIv"
        app:layout_constraintTop_toTopOf="@id/likeIv"
        app:layout_constraintBottom_toBottomOf="@id/likeIv" />
        -->

    <!--
    <ImageView
        android:id="@+id/viewIv"
        android:layout_width="@dimen/bottomPostIconDimen"
        android:layout_height="@dimen/bottomPostIconDimen"
        android:layout_marginTop="@dimen/defaultMargin"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:src="@drawable/ic_baseline_remove_red_eye_24dp"
        app:layout_constraintEnd_toEndOf="@id/viewCount"
        app:layout_constraintTop_toBottomOf="@id/barrierPostContentBottom" />

    <TextView
        android:id="@+id/viewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7"
        app:layout_constraintBottom_toBottomOf="@id/viewIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewIv" />
        -->

</androidx.constraintlayout.widget.ConstraintLayout>